<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/white">

        <TextView
            style="@style/weekName"
            android:text="@string/Sunday"
            android:textColor="@color/weekend_color" />

        <TextView
            style="@style/weekName"
            android:text="@string/Monday" />

        <TextView
            style="@style/weekName"
            android:text="@string/Tuesday" />

        <TextView
            style="@style/weekName"
            android:text="@string/Wednesday" />

        <TextView
            style="@style/weekName"
            android:text="@string/Thursday" />

        <TextView
            style="@style/weekName"
            android:text="@string/Friday" />

        <TextView
            style="@style/weekName"
            android:text="@string/Saturday"
            android:textColor="@color/weekend_color" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />

    <ScrollView
        android:id="@+id/view_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:overScrollMode="never">

        <include
            layout="@layout/main_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>